--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1"
   }
 }
